Quorum3/Library/Tests/TemplatingGenerated/Pass/TwoTypeObjObjBooleanRetInteger.quorum
class Main
    action Main
        Yoda<Integer, Integer, boolean> yoda
        boolean y = yoda:useForce(66, 66)
        output "passed"
     end
end
