Quorum3/Library/Tests/TemplatingGenerated/Fail/TwoTypeObjPriIntObjRetIntegerFail.quorum
class Main
    action Main
        Yoda<Integer, Integer, Integer> yoda
        boolean y = yoda(66, 66, true)
     end
end
